--- a/style.css
+++ b/style.css
@@ -42,14 +42,18 @@
   }
 
   main{
-    max-width: 90%;
+    max-width: 95%;
     margin: 60px auto;
     display: grid;
-    gap: 1.5rem;
+    gap: 2rem;
   }
 
   .profile{
    display: flex;
+  }
+
+  .profile-content{
+    font-size: 0.9em;
   }
 
   img{
@@ -65,7 +69,9 @@
 
   article p{
     font-weight: 600;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.2rem;
+    font-size: 1.5rem;
+    line-height: 1.4em;
   }
 
   .card-1{
@@ -73,7 +79,7 @@
   }
 
   .card-2{
-    background-color: var(--Very-dark-blackish-blue);
+    background-color: var(--Very-dark-grayish-blue);
   }
 
   .card-3{
@@ -101,4 +107,18 @@
 
 blockquote{
   font-weight: 500;
+  opacity: 50%;
+}
+
+article h3{
+  font-weight:500;
+  opacity: 70%;
+}
+
+.card-4 img{
+  border: 3px solid var(--Moderate-violet);
+}
+
+.card-1 img{
+  border: 3px solid plum;
 }
