--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
 
   .card-3,
   .card-5{
-    color: var(--Very-dark-grayish-blue);
+    color: var(--Very-dark-blackish-blue);
   }
 
 blockquote{
@@ -121,4 +121,70 @@ article h3{
 
 .card-1 img{
   border: 3px solid plum;
+}
+
+@media only screen and (min-width: 768px) {
+  article h2,
+  article h3, 
+  article blockquote{
+      font-size: 0.9em;
+  }
+
+  article p{
+    font-size: 1.4em;
+  }
+
+  article img,
+  article p{
+    margin-bottom: 15px;
+  }
+
+  body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+  }
+
+  main{
+    grid-template-columns: repeat(4, minmax(200px, 1fr));;
+    max-width: 70%;
+    margin: 0;
+    gap: 1.5em;
+  }
+
+  .card-1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .card-2{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .card-3{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .card-4{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .card-5{
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
 }
